# android-cmake

cmdline/: CMakeLists.txt  android.toolchain.cmake  build_NDK_cmake.sh
cmdline.r9/: CMakeLists.txt  NDK_all.sh  build_NDK_cmake.sh
cmdline.r9/CMAKE/: CheckHELLOCompilerFlags.cmake  hello-config-install.cmake.in
cmdline/CMAKE/: hello-config-build.cmake.in  hello-config-version.cmake.in
